fix: Hero buttons alignment in desktop

--- a/styles/hero.module.scss
+++ b/styles/hero.module.scss
@@ -48,7 +48,6 @@
 
     .hero_buttons {
       display: flex;
-      flex-direction: column;
       gap: 20px;
 
       .hero_btn {
